--- a/templates/mail/base_template.html
+++ b/templates/mail/base_template.html
@@ -34,7 +34,10 @@
                                             </tr>
                                             <tr>
                                                 <td class="padding">
-                                                    {% block content %}{{ content|safe }}{% endblock %}
+                                                    {% block content %}
+                                                        <h1>{{ subject }}</h1>
+                                                        {{ content|nl2br|safe }}
+                                                    {% endblock %}
                                                 </td>
                                             </tr>
                                         </table>
