--- a/templates/mail/base_template.html
+++ b/templates/mail/base_template.html
@@ -8,7 +8,7 @@
 
 <table cellpadding="0" cellspacing="0" border="0" width="100%">
     <tr>
-        <td style="background-color: {% block background_color %}#ccddee{% endblock %};" align="center" valign="top">
+        <td style="background-color: {% block background_color %}#f2f5f7{% endblock %};" align="center" valign="top">
             <table cellpadding="0" cellspacing="0" border="0" width="600" style="margin-top: 70px;box-shadow: 0 13px 27px rgba(0,0,0,.05);">
                 <tr>
                     <td style="background-color: #fff;" valign="top" align="center">
